<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_marginHorizontal="10dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/accelerometer"/>
    <TextView
        android:id="@+id/accelerometer_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer_x" />
    <TextView
        android:id="@+id/accelerometer_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer_y" />
    <TextView
        android:id="@+id/accelerometer_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer_z" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gyroscope"/>
    <TextView
        android:id="@+id/gyroscope_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyroscope_x" />
    <TextView
        android:id="@+id/gyroscope_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyroscope_y" />
    <TextView
        android:id="@+id/gyroscope_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyroscope_z" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/linear_acceleration"/>
    <TextView
        android:id="@+id/linear_acceleration_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_acceleration_x" />
    <TextView
        android:id="@+id/linear_acceleration_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_acceleration_y" />
    <TextView
        android:id="@+id/linear_acceleration_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_acceleration_z" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/magnetometer"/>
    <TextView
        android:id="@+id/magnetometer_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magnetometer_x" />
    <TextView
        android:id="@+id/magnetometer_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magnetometer_y" />
    <TextView
        android:id="@+id/magnetometer_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magnetometer_z" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/proximity"/>
    <TextView
        android:id="@+id/proximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proximity_value" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pressure"/>
    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_value" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/light"/>
    <TextView
        android:id="@+id/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_value" />

</LinearLayout>